language/move-lang/tests/move_check/unit_test/script_with_test_top_level.unit_test.exp
error[E10005]: unable to generate test
  ┌─ tests/move_check/unit_test/script_with_test_top_level.move:2:3
  │
2 │ #[test_only]
  │   ^^^^^^^^^ Testing attributes are not allowed in scripts.

