language/move-lang/tests/move_check/unit_test/script_with_test_top_level.move
// test a single test-related attribute on a script that isn't allowed
#[test_only]
script {
    fun main() { }
}
